fixed white space and img size

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@
   font-weight: 300;
 }
 
+body {}
+
 main {
   width: 100%;
   height: 100vh;
@@ -255,7 +257,7 @@ form button:hover {
   transition: .4s ease;
   opacity: 0;
   z-index: -1;
-  top: 55%;
+  top: 53%;
 }
 
 .showPage {
@@ -284,6 +286,9 @@ form button:hover {
   #home>h1 {
     font-size: 4em;
   }
+  .cardImg {
+    top: -50px;
+  }
 }
 
 @media (min-width: 700px) {
@@ -303,6 +308,9 @@ form button:hover {
   }
   #projects {
     width: 70%;
+  }
+  .cardImg {
+    top: -100px;
   }
   .productCard>img {
     width: 97%;
@@ -327,7 +335,7 @@ form button:hover {
     width: 50%;
   }
   #projects {
-    width: 50%;
+    width: 40%;
   }
   .productCard>img {
     width: 97%;
